<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ru.production.ssobolevsky.notepadtest.EditFragment"
              android:orientation="vertical">

    <EditText
        android:id="@+id/et_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/et_edit_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subtitle"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>

</LinearLayout>
